# rl-application-gym-game2048

./: .gitignore  README.md  game2048_config.py  game2048_eval_checkpoints.py  game2048_network.py  game2048_ppo.py  game2048_ppo_cnn.py  game2048_train.py  game2048_v2_ppo.py  game2048_v2_ppo_action_mask.py  game2048_v4_ppo_action_mask.py  monitoring.py  pyproject.toml  random_policy.py  runner.sh  sandbox.py  sandbox_single.py  sandbox_vec.py
runs/gym_game2048/: checkpoint_eval_scores.csv
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774294500/: events.out.tfevents.1774294502.chalpu-MS-7D67.56994.0
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774294500/checkpoints/infer/: infer_1464.pt  infer_1952.pt  infer_488.pt  infer_976.pt
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774294500/checkpoints/train/: train_1464.pt  train_1952.pt  train_488.pt  train_976.pt
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774417622/: events.out.tfevents.1774417625.chalpu-MS-7D67.3667393.0
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774469140/: events.out.tfevents.1774469142.chalpu-MS-7D67.1310370.0
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774510736/: events.out.tfevents.1774510738.chalpu-MS-7D67.3192104.0
runs/gym_game2048/Game2048-v0__game2048_ppo_action_mask__1__1774555442/: events.out.tfevents.1774555445.chalpu-MS-7D67.835957.0
weights/: cleanrl_game2048_ppo_cnn_488281.pt  cleanrl_game2048_v2_ppo_action_mask_48825.pt
weights/v3/: README.md
weights/v4/: README.md  v4_01.pt
(+695 files in other folders)
