[tool.poetry]
name = "rl-application-gym-game2048"
version = "0.1.0"
description = ""
authors = ["helpingstar <iamhelpingstar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21.0"
gymnasium = ">=1.0.0a1"
moviepy = ">=1.0.0"
pygame = ">=2.1.3"
torch = ">=1.12.1"
tyro = "^0.5.10"
wandb = "^0.13.11"
tensorboard = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
