[project]
name = "rl-application-gym-game2048"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8,<3.11"
authors = [
    { name = "helpingstar", email = "iamhelpingstar@gmail.com" },
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=1.0.0a1",
    "moviepy>=1.0.0",
    "pygame>=2.1.3",
    "torch>=1.12.1",
    "tyro>=0.5.10,<0.6.0",
    "wandb>=0.13.11",
    "tensorboard>=2.10.0,<3.0.0",
]

[tool.uv]
package = false
